@@ -1,4 +1,5 @@
 v4.1.3 2020-??-??
+- add crit param to plotCrit function
 - add documentation
 
 v4.1.2 2020-06-17
